[tool.poetry]
name = "sql_graphviz"
version = "20221010"
description = "Generate dot graphs from sql schema"
authors = ["Ian Zimmerman <itz@no-use.mooo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pyparsing = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
